# PCBDrillOptimizer

./: .gitignore  CMakeLists.txt  FindCPLEX.cmake  Makefile  benchmark_cplex_pseudo.cpp  benchmark_cplex_rand.cpp  benchmark_ga_pseudo.cpp  benchmark_ga_rand.cpp  dati_aggregati.xlsx  generator.py  genetic_test.cpp  main.cpp  note.md  problem.lp  readme.md  runner.sh  tsp.sol
EXTRA/test_opencv/: gmi.py  img.cpp  img.py
common/: Problem.cpp  Problem.h  Solution.cpp  Solution.h
cplex/: CPLEXSolver.cpp  CPLEXSolver.h  cpxmacro.h
ga/: GASolver.cpp  GASolver.h  Population.cpp  Population.h
istances/: 20_distances.txt  20_points.txt
istances/benchmark/pseudo/: pseudo_n100_distances.txt  pseudo_n100_points.txt  pseudo_n100_v1_distances.txt  pseudo_n100_v1_points.txt  pseudo_n100_v2_distances.txt  pseudo_n100_v2_points.txt  pseudo_n100_v3_distances.txt  pseudo_n100_v3_points.txt  pseudo_n100_v4_distances.txt  pseudo_n100_v4_points.txt  pseudo_n100_v5_distances.txt  pseudo_n100_v5_points.txt  pseudo_n105_distances.txt  pseudo_n105_points.txt  pseudo_n10_distances.txt  pseudo_n10_points.txt  pseudo_n10_v1_distances.txt  pseudo_n10_v1_points.txt  pseudo_n10_v2_distances.txt  pseudo_n10_v2_points.txt  pseudo_n10_v3_distances.txt  (+228 more)
istances/genetic/: pseudo_rand_n100_1_distances.txt  pseudo_rand_n100_1_points.txt  pseudo_rand_n100_2_distances.txt  pseudo_rand_n100_2_points.txt  pseudo_rand_n100_3_distances.txt  pseudo_rand_n100_3_points.txt  pseudo_rand_n100_4_distances.txt  pseudo_rand_n100_4_points.txt  pseudo_rand_n100_5_distances.txt  pseudo_rand_n100_5_points.txt  pseudo_rand_n150_1_distances.txt  pseudo_rand_n150_1_points.txt  pseudo_rand_n150_2_distances.txt  pseudo_rand_n150_2_points.txt  pseudo_rand_n150_3_distances.txt  pseudo_rand_n150_3_points.txt  pseudo_rand_n150_4_distances.txt  pseudo_rand_n150_4_points.txt  pseudo_rand_n150_5_distances.txt  pseudo_rand_n150_5_points.txt  pseudo_rand_n50_1_distances.txt  pseudo_rand_n50_1_points.txt  pseudo_rand_n50_2_points.txt  pseudo_rand_n50_3_distances.txt  pseudo_rand_n50_3_points.txt  pseudo_rand_n50_4_distances.txt  pseudo_rand_n50_4_points.txt  pseudo_rand_n50_5_distances.txt  pseudo_rand_n50_5_points.txt  rand_n100_1_distances.txt  rand_n100_1_points.txt  rand_n100_2_distances.txt  rand_n100_2_points.txt  rand_n100_3_distances.txt  rand_n100_3_points.txt  rand_n100_4_distances.txt  rand_n100_4_points.txt  rand_n100_5_distances.txt  rand_n100_5_points.txt  rand_n150_1_distances.txt  (+19 more)
istances/pictures/: image_medium_distances.txt  image_medium_points.txt  image_small_distances.txt  image_small_points.txt
relazione/: listings.tex  relazione-MEMOC.aux  relazione-MEMOC.tex  relazione-MEMOC.toc
relazione/sections/: codice.tex  conclusioni.tex  confronto.tex  cplex.tex  genetico.tex  introduzione.tex
(+247 files in other folders)
